@@ -25,6 +25,7 @@ version <next>:
 - libx264 reference frames count limiting depending on level
 - native Opus decoder
 - display matrix export and rotation api
+- WebVTT encoder
 
 
 version 2.2:
